[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UIElements/EB1B9F18-9494-499C-A5CA-A1DD25E1F0DC (1).JPG" type="Texture" id=1]
[ext_resource path="res://Scene/LoginPage.gd" type="Script" id=2]

[node name="LoginPage" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 340.0
margin_bottom = 14.0

[node name="Title_UserName" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 32.0

[node name="Title_Password" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 36.0
margin_right = 340.0
margin_bottom = 50.0

[node name="UserName" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 54.0
margin_right = 340.0
margin_bottom = 78.0

[node name="Password" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 82.0
margin_right = 340.0
margin_bottom = 106.0

[node name="LoginButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 110.0
margin_right = 340.0
margin_bottom = 130.0
text = "Login"

[node name="BackToStartPage" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 134.0
margin_right = 340.0
margin_bottom = 154.0
text = "Back"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_login"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/BackToStartPage" to="." method="_goBackToStartPage"]
